@@ -47,6 +47,27 @@ set up the classpath.
 with a partial classpath, or before all remote repositories are listed.
 # Check on a clean build with empty local repository.
 
+h2. Nailgun
+
+"Nailgun":http://www.martiansoftware.com/nailgun/index.html is a client,
+protocol, and server for running Java programs from the command line without 
+incurring the JVM startup overhead. 
+Nailgun integration is available only when running Buildr within JRuby.
+
+Buildr provides a custom nailgun server, allowing you to start a single JVM
+and let buildr create a queue of runtimes.
+These JRuby runtimes can be cached (indexed by buildfile path) and are 
+automatically reloaded when the buildfile has been modified.
+Runtime caching allows you to execute tasks without spending time creating 
+the buildr environment. 
+
+Some nailgun tasks have been provided to manage the cached runtimes, 
+to get an overview of them execute the @ng:tasks@ task.
+
+Be sure to read the nailgun help by executing the @ng:help@ task.
+
+To start the buildr server execute the @ng:start@ task, as mentioned
+above these tasks are only available when running on JRuby.
 
 h2. Eclipse, IDEA
 
